# Snowflake-Instrument-Studio

./: .gitignore  LICENSE  Makefile  README.md  index.html
.github/workflows/: native-vst3-cross-platform.yml  release-native-vst3.yml
css/: style.css  styles.css
js/: app.js  audio-engine.js  audioEngine.js  controls.js  dawExport.js  keyboard.js  main.js  piano-keyboard.js  preset-manager.js  presetManager.js  recorder.js  sample-manager.js  sampleManager.js
native-vst3/: CMakeLists.txt
native-vst3/src/: PluginEditor.cpp  PluginEditor.h  PluginEntry.cpp  PluginProcessor.cpp  PluginProcessor.h
scripts/: release-tag.ps1  release-tag.sh
vst3-plugin/: .gitignore  ABLETON_LIVE_LIGHT_GUIDE.md  BUILD.md  CMakeLists.txt  COMMERCIAL_LICENSE.md  INSTALL_Windows.md  INSTALL_macOS.md  LICENSE  QUICKSTART.md  README.md  build-mac.sh  build-win.bat  create-distribution.sh  package-mac.sh  package-win.bat  package.sh  release-all.bat  release-all.sh  release-mac.sh  release-win.bat
vst3-plugin/installers/: INSTALLER_README.txt  Install-Windows.bat  Install-macOS.command
vst3-plugin/source/: ADSREnvelope.cpp  ADSREnvelope.h  AudioEngine.cpp  AudioEngine.h  EQProcessor.cpp  EQProcessor.h  FilterProcessor.cpp  FilterProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Recorder.cpp  Recorder.h  SampleManager.cpp  SampleManager.h  StandaloneApp.cpp  StandaloneApp.h
