cmake_minimum_required(VERSION 3.22)

project(SnowflakeInstrumentStudio VERSION 0.1.0)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include(FetchContent)

FetchContent_Declare(
  juce
  GIT_REPOSITORY https://github.com/juce-framework/JUCE.git
  GIT_TAG 8.0.4
)

FetchContent_MakeAvailable(juce)

juce_add_plugin(SnowflakeInstrumentStudio
  COMPANY_NAME "Snowflake"
  IS_SYNTH TRUE
  NEEDS_MIDI_INPUT TRUE
  NEEDS_MIDI_OUTPUT FALSE
  IS_MIDI_EFFECT FALSE
  EDITOR_WANTS_KEYBOARD_FOCUS FALSE
  COPY_PLUGIN_AFTER_BUILD FALSE
  PLUGIN_MANUFACTURER_CODE SnwF
  PLUGIN_CODE SnIS
  FORMATS VST3 Standalone
  PRODUCT_NAME "Snowflake Instrument Studio"
)

target_sources(SnowflakeInstrumentStudio PRIVATE
  src/PluginProcessor.h
  src/PluginProcessor.cpp
  src/PluginEditor.h
  src/PluginEditor.cpp
  src/PluginEntry.cpp
)

target_compile_definitions(SnowflakeInstrumentStudio
  PUBLIC
    JUCE_WEB_BROWSER=0
    JUCE_USE_CURL=0
)

target_link_libraries(SnowflakeInstrumentStudio
  PRIVATE
    juce::juce_audio_utils
    juce::juce_dsp
  PUBLIC
    juce::juce_recommended_config_flags
    juce::juce_recommended_warning_flags
)
